use restic options parameter in configuration
and update go version

update restic,rclone,gobackup versions in Dockerfile

--- a/config.yml.example
+++ b/config.yml.example
@@ -5,7 +5,8 @@ information:
   rclone_connection_name:
   bucket_name:
   exclusion_file:
-  keep_daily: 90 # 90 days by default
+
+restic_opts: []
 
 backup:
   pre_exec:
